--- a/app/src/main/res/layout/custom_select_text.xml
+++ b/app/src/main/res/layout/custom_select_text.xml
@@ -14,7 +14,7 @@
         tools:text="Texto qualquer" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textLayout"
+        android:id="@+id/selectorTextLayout"
         style="@style/textInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,7 +23,7 @@
         app:hintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editText"
+            android:id="@+id/selectorEditText"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_48"
             android:cursorVisible="false"
@@ -31,6 +31,44 @@
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:inputType="textNoSuggestions"
+            android:textColor="@color/text_gray"
+            android:textColorHint="@color/gray_3"
+            android:textSize="@dimen/text_size_14"
+            android:textStyle="bold"
+            tools:hint="Texto qualquer" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/questionLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextLabel"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:layout_marginStart="@dimen/margin_medium"
+        android:layout_marginTop="@dimen/margin_small"
+        tools:text="Texto qualquer" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textLayout"
+        style="@style/textInputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_medium"
+        android:layout_marginTop="@dimen/margin_small"
+        app:hintAnimationEnabled="false"
+        app:hintEnabled="false"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_48"
+            android:inputType="textPersonName"
             android:textColor="@color/text_gray"
             android:textColorHint="@color/gray_3"
             android:textSize="@dimen/text_size_14"
