ramonmluz: Show open field component when value other is selected

--- a/app/src/main/res/layout/fragment_user_quiz.xml
+++ b/app/src/main/res/layout/fragment_user_quiz.xml
@@ -65,8 +65,8 @@
                     android:hint="@string/default_custom_component_select_hint"
                     android:label="@string/user_quiz_motivation_question_label"
                     android:inputType="text"
-                    app:isNeedQuestion="true"
-                    app:questionLabel="@string/user_quiz_motivation_open_field_motivation"
+                    app:isNeedQuestionSelectText="true"
+                    app:questionLabelSelectText="@string/user_quiz_motivation_open_field_motivation"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/userQuizAlreadyBicycleUserQuestion"
