--- a/app/src/main/res/layout/fragment_user_quiz.xml
+++ b/app/src/main/res/layout/fragment_user_quiz.xml
@@ -70,7 +70,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/userQuizAlreadyBicycleUserQuestion"
-                    app:textValue="@{viewModel.userMotivation}" />
+                    app:textValue="@{viewModel.userMotivation}"
+                    app:textOpenFieldValue="@={viewModel.motivationOpenQuestion}"/>
 
 
                 <app.igormatos.botaprarodar.common.components.CustomEditText
